[package]
name = "im_net"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
im_util.workspace = true

tokio = {version = "1.27.0", features = ["full"]}

[dev-dependencies]
tokio-test = "*"
